Allow reflective access in UT
We have mucking around with internals, make sure we open them up from
java.base. We also need to switch to VarHandles to get at
Field.modifiers.

Change-Id: I111e8bd1e64d37c454e9935adce23743ac43fdaa
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>